<?xml version="1.0"?>
<package format="2">
    <name>zed_nodelets</name>
    <version>3.1.0</version>
    <description>Nodelets provided by the ZED ROS wrapper.</description>

    <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
    <license>MIT</license>

    <url type="website">http://stereolabs.com/</url>
    <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
    <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>roscpp</depend>
    <depend>rosconsole</depend>
    <depend>rosgraph_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>stereo_msgs</depend>
    <depend>message_filters</depend>
    <depend>image_transport</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>nodelet</depend>
    <depend>diagnostic_updater</depend>

    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>zed_interfaces</build_depend>

    <build_export_depend>zed_interfaces</build_export_depend>

    <exec_depend>zed_interfaces</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>image_transport_plugins</exec_depend>

    <export>
         <nodelet plugin="${prefix}/nodelet_zed_nodelets.xml"/>
    </export>
</package>
