<?xml version="1.0"?>
<package format="2">
  <name>zed_wrapper</name>
  <version>3.1.0</version>
  <description>
    ZED wrapper node for the <a href="http://www.stereolabs.com/developers/">ZED library</a> for interfacing with the ZED camera.
    The zed_wrapper_node is a simple loader for the ZEDWrapperNodelet that is the main interface between ROS and the ZED SDK.
  </description>

  <maintainer email="support@stereolabs.com">STEREOLABS</maintainer>
  <license>MIT</license>

  <url type="website">http://stereolabs.com/</url>
  <url type="repository">https://github.com/stereolabs/zed-ros-wrapper</url>
  <url type="bugtracker">https://github.com/stereolabs/zed-ros-wrapper/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosconsole</depend>

  <build_depend>nodelet</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>zed_nodelets</build_depend>

  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>zed_nodelets</build_export_depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
